--- a/templates/policy.html
+++ b/templates/policy.html
@@ -26,18 +26,18 @@
             <h2>2. Available Skill Areas</h2>
             <ul>
                 <li>Baking</li>
-                <li>Hairdressing</li>
+                <li>Hair Wigging</li>
                 <li>Solar Installation</li>
-                <li>Photography</li>
-                <li>Hair Tying</li>
+                <li>Hair Barbing</li>
+                <li>Headwrap Styling</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>3. Eligibility</h2>
             <ul>
-                <li>Must be a registered member of the church.</li>
-                <li>Must be at least 16 years old.</li>
+                <li>Enrollment is open only to members of Assemblies of God Church.</li>
+                <li>Eligibility begins from the Teens Department level.</li>
                 <li>Must commit to completing the training program.</li>
                 <li>Should demonstrate a willingness to learn and abide by program guidelines.</li>
             </ul>
