--- a/templates/policy.html
+++ b/templates/policy.html
@@ -30,6 +30,7 @@
                 <li>Solar Installation</li>
                 <li>Hair Barbing</li>
                 <li>Headwrap Styling</li>
+                <li>Musical Instruments<li>
             </ul>
         </div>
 
